src/runtimerender/graphobjects/qssgrendereffect.cpp
@@ -149,8 +149,8 @@ void QSSGRenderEffect::finalizeShaders(const QSSGRenderLayer &layer, QSSGRenderC
         }
 
         // and update the command
-        delete commands[pass.bindShaderCmdIndex].command;
-        commands[pass.bindShaderCmdIndex] = { new QSSGBindShader(shaderPathKey), true };
+        delete commands[pass.bindShaderCmdIndex];
+        commands[pass.bindShaderCmdIndex] = new QSSGBindShader(shaderPathKey);
     }
 
     shaderPrepData.valid = false;
@@ -158,10 +158,7 @@ void QSSGRenderEffect::finalizeShaders(const QSSGRenderLayer &layer, QSSGRenderC
 
 void QSSGRenderEffect::resetCommands()
 {
-    for (const Command &cmd : commands) {
-        if (cmd.own)
-            delete cmd.command;
-    }
+    qDeleteAll(commands);
     commands.clear();
     shaderPrepData.passes.clear();
 }
