tools/shadergen/genshaders.cpp
@@ -320,8 +320,7 @@ bool GenShaders::process(const MaterialParser::SceneData &sceneData,
         nodes.append(renderEffect);
 
         const auto &commands = renderEffect->commands;
-        for (const QSSGRenderEffect::Command &c : commands) {
-            QSSGCommand *command = c.command;
+        for (const QSSGCommand *command : commands) {
             if (command->m_type == CommandType::BindShader) {
                 auto bindShaderCommand = static_cast<const QSSGBindShader &>(*command);
                 for (const auto isYUpInFramebuffer : { true, false }) { // Generate effects for both up-directions.
